# key_logger

./: .gitignore  README.md  pyproject.toml
src/app/: KeyLogger.py  LogFile.py  main.py
