[tool.poetry]
name = "keylogger"
version = "0.1.0"
description = ""
authors = ["xyz"]
readme = "README.md"
packages = [{include = "keylogger", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"
pyperclip = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
